# hackathon-drone-interception-system

./: .env.example  .gitignore  README.md
dji-stream-to-tak-bridge/: README.md  local.properties.example  settings.gradle.kts
dji-stream-to-tak-bridge/app/: build.gradle.kts  proguard-rules.pro
drone-vision/: README.md  benchmark_start.bat  detect_drone.py  pyproject.toml  requirements.txt  start.bat  start_demo.bat  start_demo.sh
drone-vision/docs/: architecture.md  benchmark-plan.md  data-and-training.md  development.md  inference-optimizations-quality.md  overview.md  runtime-performance.md  troubleshooting.md  usage.md
drone-vision/drone_overlay/: __init__.py  cli.py  detection.py  geometry.py  metrics.py  overlay.py  preprocess.py  tracking.py  video.py
drone-vision/mti_detector/: __init__.py  bg_subtraction.py  demo_mti.py  fake_drone_video.py  mti_guided_detector.py  save_mog2_masks.py  streamlit_demo.py  test_classifier.py  test_mog2_classifier.py  test_mti.py  test_sahi.py
drone-vision/tests/: test_cli.py  test_coco_conversion.py  test_detection.py  test_geometry.py  test_metrics.py  test_tracking.py  test_video_controls.py  test_video_pipeline.py  test_video_validation.py
drone-vision/tools/: __init__.py  benchmark.py  convert_coco_to_yolo.py  sweep.py
takserver/: .env.example  README.md  docker-compose.yml
takserver/docs/: INSTALL.md  USER_GUIDE.md
takserver/server/: Dockerfile  requirements.txt
takserver/tools/: dji_bridge_e2e.py  e2e_test.py  (+1 more)
triangometry-towers-calc/: README.md  drone_map_three.py  drone_map_ui.py  e2e_three_viewer.py
(+31 files in other folders)
