[project]
name = "drone-detection-overlay"
version = "0.1.0"
description = "Real-time drone detection video overlay MVP using OpenCV and Ultralytics YOLO."
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9",
  "ultralytics>=8.3",
  "numpy>=1.26",
  "onnxruntime>=1.20",
  "onnx>=1.17",
  "ensemble-boxes>=1.0.9,<1.1",
  "streamlit>=1.58",
  "tensorflow>=2.16",
  "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
